@@ -1,7 +1,7 @@
 ----------------------------------------------------------------------
  OmegaT 2.7.0
 ----------------------------------------------------------------------
-  22 Enhancements
+  23 Enhancements
    5 Bug fixes
    0 Localisation update
 ----------------------------------------------------------------------
@@ -59,6 +59,9 @@
 
   - Not adding extra space on Insert Missing Source Tags
   http://sourceforge.net/support/tracker.php?aid=3370310
+
+  - Better OmegaT icon resolution
+  http://sourceforge.net/support/tracker.php?aid=3603928
 
   Other enhancements:
 
